--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         compileSdkVersion = 30
         targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
+        authVersion = "19.0.0"
+        fitnessVersion = "20.0.0"
     }
     repositories {
         google()
